--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Changes for MooseX-App
 
+1.24 Fri, Feb 14, 2014
+    - Fix POD warnings (David Golden)
+    - Always reuse existing MooseX::App::ParsedArgv instances
+    - Parse @ARGV as soon as possible
+    - Fix Win32 colorisation issues (J.R. Mash)
+    - Add app_prefer_commandline option
+
 1.23 Mon, Jan 27, 2014
     - Documentation
     - Manual plugin
