--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
-* Make messages translatable
-* Deprecated role
+* Better hashref support (eg colons, multiple pairs)
+* Nested subcommands
+* Better positional param detection
